// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormErrorsWrapper tests Snapshot 1`] = `
<FormErrorsWrapper
  error={[Error: Test error]}
>
  <Bullseye
    data-ouia-component-type="form-errors-wrapper"
    data-ouia-safe={true}
  >
    <div
      className="pf-l-bullseye"
      data-ouia-component-type="form-errors-wrapper"
      data-ouia-safe={true}
    >
      <EmptyState
        variant="full"
      >
        <div
          className="pf-c-empty-state"
        >
          <div
            className="pf-c-empty-state__content"
          >
            <EmptyStateIcon
              icon={[Function]}
            >
              <ExclamationCircleIcon
                aria-hidden="true"
                className="pf-c-empty-state__icon"
                color="currentColor"
                noVerticalAlign={false}
                size="sm"
              >
                <svg
                  aria-hidden="true"
                  aria-labelledby={null}
                  className="pf-c-empty-state__icon"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style={
                    Object {
                      "verticalAlign": "-0.125em",
                    }
                  }
                  viewBox="0 0 512 512"
                  width="1em"
                >
                  <path
                    d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                  />
                </svg>
              </ExclamationCircleIcon>
            </EmptyStateIcon>
            <Title
              headingLevel="h4"
              size="lg"
            >
              <h4
                className="pf-c-title pf-m-lg"
                data-ouia-component-id="OUIA-Generated-Title-1"
                data-ouia-component-type="PF4/Title"
                data-ouia-safe={true}
              >
                Error displaying form:
              </h4>
            </Title>
            <EmptyStateBody>
              <div
                className="pf-c-empty-state__body"
              >
                Error: Test error
                .
                 
                <Button
                  isInline={true}
                  onClick={[Function]}
                  variant="link"
                >
                  <MockedComponent />
                </Button>
              </div>
            </EmptyStateBody>
          </div>
        </div>
      </EmptyState>
    </div>
  </Bullseye>
</FormErrorsWrapper>
`;

exports[`FormErrorsWrapper tests Snapshot 2`] = `
<FormErrorsWrapper
  error={[Error: Test error]}
>
  <Bullseye
    data-ouia-component-type="form-errors-wrapper"
    data-ouia-safe={true}
  >
    <div
      className="pf-l-bullseye"
      data-ouia-component-type="form-errors-wrapper"
      data-ouia-safe={true}
    >
      <EmptyState
        variant="full"
      >
        <div
          className="pf-c-empty-state"
        >
          <div
            className="pf-c-empty-state__content"
          >
            <EmptyStateIcon
              icon={[Function]}
            >
              <ExclamationCircleIcon
                aria-hidden="true"
                className="pf-c-empty-state__icon"
                color="currentColor"
                noVerticalAlign={false}
                size="sm"
              >
                <svg
                  aria-hidden="true"
                  aria-labelledby={null}
                  className="pf-c-empty-state__icon"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style={
                    Object {
                      "verticalAlign": "-0.125em",
                    }
                  }
                  viewBox="0 0 512 512"
                  width="1em"
                >
                  <path
                    d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                  />
                </svg>
              </ExclamationCircleIcon>
            </EmptyStateIcon>
            <Title
              headingLevel="h4"
              size="lg"
            >
              <h4
                className="pf-c-title pf-m-lg"
                data-ouia-component-id="OUIA-Generated-Title-1"
                data-ouia-component-type="PF4/Title"
                data-ouia-safe={true}
              >
                Error displaying form:
              </h4>
            </Title>
            <EmptyStateBody>
              <div
                className="pf-c-empty-state__body"
              >
                Error: Test error
                .
                 
                <Button
                  isInline={true}
                  onClick={[Function]}
                  variant="link"
                >
                  <MockedComponent />
                </Button>
              </div>
            </EmptyStateBody>
            <EmptyStateBody>
              <div
                className="pf-c-empty-state__body"
              >
                <ClipboardCopy
                  isCode={true}
                  isExpanded={true}
                  variant="expansion"
                >
                  <MockedComponent />
                </ClipboardCopy>
              </div>
            </EmptyStateBody>
          </div>
        </div>
      </EmptyState>
    </div>
  </Bullseye>
</FormErrorsWrapper>
`;
